update dir: lr/

--- a/dirs/lr/lr9520.markdown
+++ b/dirs/lr/lr9520.markdown
@@ -6,4 +6,5 @@ permalink: /lr/
 
 # Directory listing for /lr
 [**<-back**](/)  
+[**:page_facing_up: bar.md**](bar) ([download](bar.md))  
 [**:page_facing_up: foo.md**](foo) ([download](foo.md))  
